<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_alignParentEnd="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".MainActivity"
    tools:menu="@menu/main_menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageButton
                android:id="@+id/cmdKm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/frais_km"
                android:contentDescription="@string/icone_frais_km"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageButton
                android:id="@+id/cmdRepas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/frais_repas"
                android:contentDescription="@string/icone_frais_repas" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageButton
                android:id="@+id/cmdNuitee"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/frais_nuitee"
                android:contentDescription="@string/icone_frais_nuitee"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageButton
                android:id="@+id/cmdEtape"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/frais_etape"
                android:contentDescription="@string/icone_frais_etape"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageButton
                android:id="@+id/cmdHf"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/frais_hf"
                android:contentDescription="@string/icone_frais_hf"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageButton
                android:id="@+id/cmdHfRecap"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/frais_hf_recap"
                android:contentDescription="@string/icone_recap_hf" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <ImageButton
            android:id="@+id/cmdTransfert"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.25"
            android:background="@null"
            android:contentDescription="@string/icone_transfert"
            android:scaleType="fitCenter"
            android:src="@drawable/transfert" />

    </LinearLayout>

</LinearLayout>

